CREATE TABLE IF NOT EXISTS films
(
    film_id      bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name         varchar(255) NOT NULL,
    description  varchar(200),
    release_date date         NOT NULL,
    duration     int          NOT NULL,
    mpa_rate     int REFERENCES MPA_RATE(mpa_id)
);


CREATE TABLE IF NOT EXISTS genres
(
    genre_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name     varchar(255) NOT NULL
);

CREATE TABLE IF NOT EXISTS mpa_rate
(
    mpa_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name   varchar(5) NOT NULL
);


CREATE TABLE IF NOT EXISTS films_genres
(
    film_id  bigint REFERENCES films (film_id),
    genre_id integer REFERENCES genres (genre_id),
    PRIMARY KEY (film_id, genre_id)
);

CREATE TABLE IF NOT EXISTS users
(
    user_id  bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name     varchar(255),
    email    varchar(255) NOT NULL,
    login    varchar(255) NOT NULL,
    birthday date         NOT NULL
);

CREATE TABLE IF NOT EXISTS films_likes
(
    film_id bigint REFERENCES films (film_id),
    user_id integer REFERENCES users (user_id),
    PRIMARY KEY (film_id, user_id)
);

CREATE TABLE IF NOT EXISTS users_friends
(
    user_id   integer REFERENCES users (user_id),
    friend_id integer REFERENCES users (user_id),
    PRIMARY KEY (user_id, friend_id)
);
