// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
// This model https://dbdiagram.io/d/Filmogram-67f111cb4f7afba1847331d9

Table films {
  film_id bigint [primary key]
  name varchar(255) [not null]
  description varchar(200)
  release_date date [not null]
  duration int [not null]
  mpa_rate int [not null]

}

Table users {
  user_id bigint [primary key]
  email varchar(255) [not null]
  login varchar(255) [not null]
  name varchar(255)
  birthday date [not null]
}

Table films_likes{
  film_id bigint [pk, not null]
  user_id bigint [pk, not null]

}

Table users_friends{
  user_id bigint [pk, not null]
  friend_id bigint [pk, not null]
}

Table genres {
  genre_id integer [primary key]
  name varchar(255) [not null]
}

Table mpa_rate {
  mpa_rate_id integer [primary key]
  name varchar(5) [not null]
}


Table films_genres {
  film_id bigint [pk, not null]
  genre_id integer [pk, not null]
}

Ref: users.user_id < films_likes.user_id
Ref: films.film_id < films_likes.film_id

Ref: films.film_id < films_genres.film_id
Ref: genres.genre_id < films_genres.genre_id
Ref: mpa_rate.mpa_id < films.mpa_rate

Ref: users.user_id < users_friends.user_id
Ref: users.user_id < users_friends.friend_id

